--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
     "expo-cli": "^4.4.6",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
